feat(jmx): add JMX metrics exposure for Counters, Timers, and Summaries with MBeans and integration tests

--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,18 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- JUnit 5 (Jupiter) for all modules -->
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>3.8.2</version>
-        <scope>test</scope>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.11.3</version>
       </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.11.3</version>
+      </dependency>
+      <!-- Legacy deps retained for now; to be modernized later -->
       <dependency>
         <groupId>commons-logging</groupId>
         <artifactId>commons-logging</artifactId>
