--- a/dev-easy-cross-cutting-exporter-jmx/pom.xml
+++ b/dev-easy-cross-cutting-exporter-jmx/pom.xml
@@ -16,5 +16,16 @@
       <artifactId>dev-easy-cross-cutting-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- JUnit 5 (Jupiter) -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
